<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent">

    <include
        android:id="@+id/include2"
        layout="@layout/fragment_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="78dp" />

    <TextView
        android:id="@+id/tvFeedbackTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_extrabold"
        android:paddingTop="50dp"
        android:text="@string/feedback"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="150dp">

            <ImageView
                android:id="@+id/ivBackgroundRound"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:minHeight="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/bg_round_top" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/etFeedbackEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/rounded_corners_catagorie"
                    android:elevation="5dp"
                    android:fontFamily="@font/open_sans_light"
                    android:hint="@string/email"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/etFeedbackSubject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/rounded_corners_catagorie"
                    android:elevation="5dp"
                    android:fontFamily="@font/open_sans_light"
                    android:hint="@string/subject"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/etFeedbackText"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_margin="15dp"
                    android:background="@drawable/rounded_corners_catagorie"
                    android:elevation="5dp"
                    android:ems="10"
                    android:focusable="auto"
                    android:fontFamily="@font/open_sans"
                    android:gravity="start|top"
                    android:hint="@string/hint_feedback_message"
                    android:inputType="textMultiLine"
                    android:padding="10dp"
                    android:scrollbars="vertical" />

                <Button
                    android:id="@+id/btn_send_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:fontFamily="@font/open_sans_extrabold"
                    android:text="@string/feedback_button" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="150dp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:clickable="true"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@android:color/white"
        app:tint="@null"
        app:srcCompat="@drawable/left_arrow_white"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>